Nicht verwendete Komponente entfernt

--- a/.gitignore
+++ b/.gitignore
@@ -70,3 +70,7 @@ typings/
 # customisations
 customisation/*.js
 frontend/src/customisation/*.js
+public/customisation/*.js
+customisation/*.jpg
+frontend/src/customisation/*.jpg
+public/customisation/*.jpg
