--- a/.gitignore
+++ b/.gitignore
@@ -70,7 +70,7 @@ typings/
 # customisations
 customisation/*.js
 frontend/src/customisation/*.js
-public/customisation/*.js
+frontend/public/customisation/*.js
 customisation/*.jpg
 frontend/src/customisation/*.jpg
-public/customisation/*.jpg
+frontend/public/customisation/*.jpg
