gitignore angepasst, um alle Customization-Dateien zu ignorieren, außer Markdown-Dateien

--- a/.gitignore
+++ b/.gitignore
@@ -68,8 +68,5 @@ typings/
 .env
 
 # customisations
-customisation/*.js
-frontend/src/customisation/*.js
-frontend/public/customisation/*.js
-frontend/src/customisation/*.jpg
-frontend/public/customisation/*.jpg
+**/customisation/*.*
+!**/customisation/*.md
