Revert Logo handling - for now just fixed logo.svg, since Edge and Chrome seem to have trouble with svg-src in img.

--- a/.gitignore
+++ b/.gitignore
@@ -67,6 +67,9 @@ typings/
 # dotenv environment variables file
 .env
 
-# customisations
+# generated files
+**/*.generated.js
+
+# customisations but keep the Readme.md files
 **/customisation/*.*
 !**/customisation/*.md
