Suchzeit und Hilfe angepasst

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -5,3 +5,4 @@ REACT_APP_ADMIN=adminuser
 REACT_APP_FILE_PORT=4000
 REACT_APP_AUTHENTICATION_PORT=4166
 REACT_APP_USE_LOCAL_AUTHENTICATION=false
+REACT_APP_MAILGROUP_RIGHTS=
