--- a/frontend/package.json
+++ b/frontend/package.json
@@ -43,6 +43,7 @@
     "react-toastify": "^5.3.2",
     "redux": "^4.0.4",
     "regenerator-runtime": "^0.13.3",
+    "store": "^2.0.12",
     "styled-components": "^4.3.2",
     "universal-cookie": "^3.1.0",
     "uuid": "^3.3.2",
