--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,7 @@
     "ramda": "^0.26.1",
     "react": "^16.8.6",
     "react-app-polyfill": "^0.2.2",
+    "react-autocomplete-input": "^1.0.12",
     "react-autosuggest": "^9.4.3",
     "react-bootstrap": "^1.0.0-beta.6",
     "react-dom": "^16.8.5",
