--- a/frontend/package.json
+++ b/frontend/package.json
@@ -40,7 +40,7 @@
     "react-json-view": "^1.19.1",
     "react-redux": "^7.0.3",
     "react-router-dom": "^5.0.0",
-    "react-table": "^6.10.0",
+    "react-table-6": "^6.11.0",
     "react-toastify": "^5.3.2",
     "redux": "^4.0.4",
     "regenerator-runtime": "^0.13.3",
