--- a/frontend/package.json
+++ b/frontend/package.json
@@ -46,8 +46,10 @@
     "regenerator-runtime": "^0.13.3",
     "store": "^2.0.12",
     "styled-components": "^5.0.1",
-    "uuid": "^3.3.2",
-    "vis-timeline": "^5.1.0",
+    "uuid": "8.2.0",
+    "vis-data": "^6.6.1",
+    "vis-timeline": "^7.3.7",
+    "vis-util": "^4.3.3",
     "xml-formatter": "^1.1.0"
   },
   "scripts": {
@@ -60,7 +62,7 @@
     "extends": "react-app"
   },
   "devDependencies": {
-    "react-scripts": "3.0.1"
+    "react-scripts": "3.4.1"
   },
   "browserslist": [
     ">0.2%",
