--- a/frontend/package.json
+++ b/frontend/package.json
@@ -40,6 +40,7 @@
     "react-json-view": "^1.19.1",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.0.0",
+    "react-table": "^7.5.1",
     "react-table-6": "^6.11.0",
     "react-toastify": "^5.3.2",
     "redux": "^4.0.4",
