--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,7 +30,7 @@
     "react": "^16.11.0",
     "react-app-polyfill": "^0.2.2",
     "react-autocomplete-input": "^1.0.12",
-    "react-autosuggest": "^9.4.3",
+    "react-autosuggest": "^10.0.3",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.11.0",
     "react-flatpickr": "^3.9.0",
@@ -43,6 +43,8 @@
     "react-table": "^7.5.1",
     "react-table-6": "^6.11.0",
     "react-toastify": "^5.3.2",
+    "react-virtualized-auto-sizer": "^1.0.2",
+    "react-window": "^1.8.5",
     "redux": "^4.0.4",
     "regenerator-runtime": "^0.13.3",
     "store": "^2.0.12",
