--- a/package.json
+++ b/package.json
@@ -35,11 +35,10 @@
     "release-it": "cd frontend && yarn release-it && git push --follow-tags"
   },
   "devDependencies": {
-    "@zeit/ncc": "^0.22.3",
+    "@vercel/ncc": "^0.28.5",
     "cpy-cli": "^3.1.1",
     "npm-run-all": "^4.1.5",
-    "pkg": "^5.1.0",
-    "react-scripts": "^3.4.3"
+    "pkg": "^5.1.0"
   },
   "pkg": {
     "assets": [
