--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
     "@atlaskit/reduced-ui-pack": "^14.0.1",
     "@atlaskit/select": "^15.2.2",
     "@rehooks/component-size": "^1.0.2",
+    "@types/node": "^16.11.6",
     "@welldone-software/why-did-you-render": "^6.2.1",
     "axios": "^0.22.0",
     "bootstrap": "^4.1.0",
