Link to Call from Undelivered etc, fix #281

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -60,7 +60,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "start": "react-scripts start",
-    "release-it": "yarn version --patch"
+    "release-it": "npm run version --patch"
   },
   "eslintConfig": {
     "extends": "react-app"
