--- a/package.json
+++ b/package.json
@@ -20,19 +20,19 @@
     "backup:config": "node backupConfig.js",
     "start:auth": "node server.js",
     "start:file": "node backend-jobs/server.js",
-    "start:frontend": "cd frontend && yarn start",
+    "start:frontend": "cd frontend && npm run start",
     "start": "npm-run-all --parallel start:frontend start:auth ncc:server:file --print-label",
     "ncc:server:auth": "ncc run server.js",
     "ncc:server:file": "ncc run backend-jobs/server",
     "ncc:build": "ncc build server.js -o dist/auth && ncc build backend-jobs/server.js -o dist/jobs",
-    "build": "cd frontend && yarn build",
-    "prepkg:server:dashboard": "yarn build",
+    "build": "cd frontend && npm build",
+    "prepkg:server:dashboard": "npm build",
     "pkg:server:dashboard": "pkg . --target node10-win-x64 --output esb-dashboard.exe --debug > output-dashboard-win-pkg.log",
     "pkg:server:file": "pkg ./backend-jobs/server.js --options max_old_space_size=4096 --target node10-win-x64 --output esb-jobs.exe --debug > output-jobs-windows-pkg.log",
-    "pkg:all": "yarn pkg:server:dashboard && yarn pkg:server:file",
-    "build:all": "yarn backup:config && yarn pkg:all && yarn ncc:build",
+    "pkg:all": "npm run pkg:server:dashboard && npm run pkg:server:file",
+    "build:all": "npm run backup:config && npm run pkg:all && npm run ncc:build",
     "postbuild:all": "cpy ./dist/auth/index.js ./frontend/build --rename=auth.js",
-    "release-it": "cd frontend && yarn release-it && git push --follow-tags"
+    "release-it": "cd frontend && npm run release-it && git push --follow-tags"
   },
   "devDependencies": {
     "@vercel/ncc": "^0.31.1",
