Fix Build Script (musste von yarn auf npm zurück)

--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
     "ncc:server:auth": "ncc run server.js",
     "ncc:server:file": "ncc run backend-jobs/server",
     "ncc:build": "ncc build server.js -o dist/auth && ncc build backend-jobs/server.js -o dist/jobs",
-    "build": "cd frontend && npm build",
-    "prepkg:server:dashboard": "npm build",
+    "build": "cd frontend && npm run build",
+    "prepkg:server:dashboard": "npm run build",
     "pkg:server:dashboard": "pkg . --target node10-win-x64 --output esb-dashboard.exe --debug > output-dashboard-win-pkg.log",
     "pkg:server:file": "pkg ./backend-jobs/server.js --options max_old_space_size=4096 --target node10-win-x64 --output esb-jobs.exe --debug > output-jobs-windows-pkg.log",
     "pkg:all": "npm run pkg:server:dashboard && npm run pkg:server:file",
