--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "core-js": "^3.22.5",
     "crossfilter2": "^1.5.4",
     "d3": "^7.6.1",
+    "d3-scale-chromatic": "^3.0.0",
     "dc": "^4.2.7",
     "debug": "^4.3.4",
     "fast-xml-parser": "^4.0.9",
