Package Versions gepinned

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,59 +4,59 @@
   "homepage": ".",
   "license": "MIT",
   "dependencies": {
-    "@atlaskit/reduced-ui-pack": "^16.1.0",
-    "@atlaskit/select": "^15.2.12",
-    "@rehooks/component-size": "^1.0.2",
-    "@types/node": "^18.8.2",
-    "@welldone-software/why-did-you-render": "^7.0.1",
-    "axios": "^0.27.2",
-    "bootstrap": "^5.2.2",
-    "copy-to-clipboard": "^3.2.0",
-    "core-js": "^3.22.5",
-    "crossfilter2": "^1.5.4",
-    "d3": "^7.6.1",
-    "d3-scale-chromatic": "^3.0.0",
-    "dc": "^4.2.7",
-    "debug": "^4.3.4",
-    "fast-xml-parser": "^4.0.9",
-    "flatpickr": "^4.6.13",
-    "jsonpath": "^1.1.1",
-    "jsonschema": "^1.4.1",
-    "moment": "^2.29.4",
-    "object.entries": "^1.1.5",
-    "pino": "^7.11.0",
-    "pino-pretty": "^7.6.1",
-    "prop-types": "^15.7.2",
-    "query-string": "^7.1.1",
-    "ramda": "^0.28.0",
-    "react": "^17.0.2",
-    "react-app-polyfill": "^3.0.0",
-    "react-autocomplete-input": "^1.0.18",
-    "react-autosuggest": "^10.1.0",
-    "react-bootstrap": "^2.4.0",
-    "react-dom": "^17.0.2",
-    "react-flatpickr": "^3.10.13",
-    "react-helmet": "^6.1.0",
-    "react-icons": "^4.3.1",
-    "react-inspector": "^5.1.1",
-    "react-json-view": "^1.21.3",
-    "react-redux": "^8.0.1",
-    "react-router-dom": "^6.3.0",
-    "react-table": "^7.8.0",
-    "react-table-6": "^6.11.0",
-    "react-toastify": "^9.0.7",
-    "react-virtualized-auto-sizer": "^1.0.6",
-    "react-window": "^1.8.7",
-    "redux": "^4.2.0",
-    "regenerator-runtime": "^0.13.9",
-    "store": "^2.0.12",
-    "styled-components": "^5.3.5",
-    "url": "^0.11.0",
+    "@atlaskit/reduced-ui-pack": "16.1.0",
+    "@atlaskit/select": "15.2.12",
+    "@rehooks/component-size": "1.0.2",
+    "@types/node": "18.8.2",
+    "@welldone-software/why-did-you-render": "7.0.1",
+    "axios": "0.27.2",
+    "bootstrap": "5.2.2",
+    "copy-to-clipboard": "3.2.0",
+    "core-js": "3.22.5",
+    "crossfilter2": "1.5.4",
+    "d3": "7.6.1",
+    "d3-scale-chromatic": "3.0.0",
+    "dc": "4.2.7",
+    "debug": "4.3.4",
+    "fast-xml-parser": "4.0.9",
+    "flatpickr": "4.6.13",
+    "jsonpath": "1.1.1",
+    "jsonschema": "1.4.1",
+    "moment": "2.29.4",
+    "object.entries": "1.1.5",
+    "pino": "7.11.0",
+    "pino-pretty": "7.6.1",
+    "prop-types": "15.7.2",
+    "query-string": "7.1.1",
+    "ramda": "0.28.0",
+    "react": "17.0.2",
+    "react-app-polyfill": "3.0.0",
+    "react-autocomplete-input": "1.0.18",
+    "react-autosuggest": "10.1.0",
+    "react-bootstrap": "2.4.0",
+    "react-dom": "17.0.2",
+    "react-flatpickr": "3.10.13",
+    "react-helmet": "6.1.0",
+    "react-icons": "4.3.1",
+    "react-inspector": "5.1.1",
+    "react-json-view": "1.21.3",
+    "react-redux": "8.0.1",
+    "react-router-dom": "6.3.0",
+    "react-table": "7.8.0",
+    "react-table-6": "6.11.0",
+    "react-toastify": "9.0.7",
+    "react-virtualized-auto-sizer": "1.0.6",
+    "react-window": "1.8.7",
+    "redux": "4.2.0",
+    "regenerator-runtime": "0.13.9",
+    "store": "2.0.12",
+    "styled-components": "5.3.5",
+    "url": "0.11.0",
     "uuid": "8.3.2",
-    "vis-data": "^7.1.4",
-    "vis-timeline": "^7.7.0",
-    "vis-util": "^5.0.3",
-    "xml-formatter": "^2.6.1"
+    "vis-data": "7.1.4",
+    "vis-timeline": "7.7.0",
+    "vis-util": "5.0.3",
+    "xml-formatter": "2.6.1"
   },
   "scripts": {
     "build": "react-scripts build",
@@ -68,7 +68,7 @@
     "extends": "react-app"
   },
   "devDependencies": {
-    "react-scripts": "^5.0.1"
+    "react-scripts": "5.0.1"
   },
   "browserslist": [
     ">0.2%",
