--- a/package.json
+++ b/package.json
@@ -4,17 +4,17 @@
   "license": "MIT",
   "bin": "server.js",
   "dependencies": {
-    "@koa/cors": "^3.4.1",
-    "activedirectory2": "^2.1.0",
-    "adm-zip": "^0.5.9",
-    "axios": "^1.0.0",
-    "koa": "^2.13.4",
-    "koa-bodyparser": "^4.3.0",
-    "koa-router": "^12.0.0",
-    "koa-send": "^5.0.1",
-    "ldapjs": "^2.3.3",
-    "moment": "^2.29.4",
-    "ramda": "^0.28.0"
+    "@koa/cors": "3.4.1",
+    "activedirectory2": "2.1.0",
+    "adm-zip": "0.5.9",
+    "axios": "1.0.0",
+    "koa": "2.13.4",
+    "koa-bodyparser": "4.3.0",
+    "koa-router": "12.0.0",
+    "koa-send": "5.0.1",
+    "ldapjs": "2.3.3",
+    "moment": "2.29.4",
+    "ramda": "0.28.0"
   },
   "scripts": {
     "backup:config": "node backupConfig.js",
@@ -37,10 +37,10 @@
     "postbuild-auth": "cpy ./dist/auth/index.js ./frontend/build --rename=auth.js --flat"
   },
   "devDependencies": {
-    "@vercel/ncc": "^0.34.0",
-    "cpy-cli": "^4.2.0",
-    "npm-run-all": "^4.1.5",
-    "pkg": "^5.8.0"
+    "@vercel/ncc": "0.34.0",
+    "cpy-cli": "4.2.0",
+    "npm-run-all": "4.1.5",
+    "pkg": "5.8.0"
   },
   "pkg": {
     "assets": [
